--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 25%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .image-container img {
