--- a/style.css
+++ b/style.css
@@ -38,9 +38,10 @@ header {
     background: #333;
     color: #fff;
     padding: 10px 20px; /* Adjust padding for smaller screens */
-    padding-top: 30px;
+    padding-top: 20px;
     min-height: 70px;
     border-bottom: #bbb 1px solid;
+    padding-bottom: 10px;
 }
 
 header h1 {
@@ -81,7 +82,7 @@ footer {
 @media (max-width: 600px) {
     .container, nav {
         width: 100%;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
     }
 
