--- a/style.css
+++ b/style.css
@@ -22,16 +22,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 25%;
+    height: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .image-container img {
-    max-width: 25%;
-    height: 50px;
-    width: 50px;
-    margin: auto;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 header {
