--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
 
 .image-container img {
     max-width: 100%;
-    width: 25%;
-    height: auto;
+    width: 5%;
+    height: 10%;
     display: block;
     margin-left: auto;
     margin-right: auto;
