--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     line-height: 1.6;
 }
 
+.main-content {
+    padding-top: 100px;
+}
+
 .container {
     width: 80%;
     margin: auto;
@@ -36,7 +40,9 @@ body {
 
 header {
     position: fixed;
+    top: 0;
     width: 100%;
+    z-index: 10;
     background: #333;
     color: #fff;
     padding-top: 20px;
