--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .main-content {
-    padding-top: 100px;
+    padding-top: 200px;
 }
 
 .container {
@@ -41,7 +41,10 @@ body {
 header {
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
+    height: 70px;
     z-index: 10;
     background: #333;
     color: #fff;
