--- a/style.css
+++ b/style.css
@@ -37,11 +37,7 @@ nav {
     padding: 10px 10px
     gap: 10px;
     margin-right: 25px;
-}
-
-.nav-toggle {
-    display: none;
-    cursor: pointer;
+    text-align: center;
 }
 
 nav a {
@@ -51,6 +47,10 @@ nav a {
     font-size: 16px;
 }
 
+.nav-toggle {
+    display: none;
+    cursor: pointer;
+}
 
 .main-content {
     padding-top: 200px;
