--- a/style.css
+++ b/style.css
@@ -79,6 +79,28 @@ nav a {
     margin-right: auto;
 }
 
+.divider {
+    border-bottom: 1px solid #333;
+    text-align: center;
+    margin: 20px 0;
+    line-height: 0.1em;
+}
+
+.divider span {
+    background: #fff; /* Background color of your page */
+    padding: 0 10px;
+}
+
+.svg-divider {
+    margin: 20px 0;
+}
+
+.shadow-divider {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    margin: 20px 0;
+}
+
 .hr-dotted {
     border-top: 1px dotted #333;
     margin: 20px 0;
