--- a/style.css
+++ b/style.css
@@ -34,22 +34,22 @@ header h1 {
 }
 
 h1.landing_page {
-    color: #4a90e2;
+    color: #FFF;
     font-size: 24px;
     text-align: center;
     font-weight: bold;
     margin: 20px 0;
     padding: 10px;
-    border-bottom: 2px solid #4a90e2;
+    border-bottom: 4px solid #FFF;
 }
 
 h2.landing_page {
-    color: #4a98e2;
+    color: #FFF;
     font-size: 16px;
     text-align: center;
     margin: 20px 0;
     padding: 10px;
-    border-bottom: 2px solid #4a98e2;
+    border-bottom: 2px solid #FFF;
 }
 
 header h2 {
