--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ nav a {
 }
 
 .divider span {
-    background: #fff; /* Background color of your page */
+    background: #fff;
     padding: 0 10px;
 }
 
