--- a/style.css
+++ b/style.css
@@ -81,11 +81,19 @@ nav a {
 
 .container {
     width: 50%;
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
 }
 
+container.centered {
+    width: 50%;
+    max-width: 100%;
+    margin: 0 auto;
+    margin-left: 50%;
+    margin-right: 50%;
+    padding: 20px;
+}
 
 .image-container {
     display: flex;
@@ -124,22 +132,6 @@ nav a {
 }
 
 .svg-divider {
-    margin: 20px 0;
-}
-
-.shadow-divider {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    margin: 20px 0;
-}
-
-.hr-dotted {
-    border-top: 1px dotted #333;
-    margin: 20px 0;
-}
-
-.hr-dashed {
-    border-top: 1px dashed #333;
     margin: 20px 0;
 }
 
