--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header h1 {
 }
 
 h1.landing_page {
-    color: #FFF;
+    color: #666;
     font-size: 24px;
     text-align: center;
     font-weight: bold;
@@ -43,7 +43,7 @@ h1.landing_page {
 }
 
 h2.landing_page {
-    color: #FFF;
+    color: #666;
     font-size: 16px;
     text-align: center;
     margin: 20px 0;
@@ -111,7 +111,7 @@ container.centered {
 }
 
 .image-border {
-    border: 4px solid #fff;
+    border: 4px solid #FFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: block;
     margin: 10px auto;
