--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ container.centered {
     margin-left: 50%;
     margin-right: 50%;
     padding: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .image-container {
