--- a/style.css
+++ b/style.css
@@ -137,6 +137,12 @@ container.centered {
     margin: 20px 0;
 }
 
+.svg-divider-sub {
+    color: #666;
+    margin: 20px 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 footer {
     position: fixed;
     left: 0;
