--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ container.centered {
 }
 
 .image-border {
-    border: 4px solid #FFF;
+    border: 4px solid #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: block;
     margin: 10px auto;
