--- a/style.css
+++ b/style.css
@@ -143,6 +143,12 @@ container.centered-container {
     stroke-width: 1;
 }
 
+p.center-text {
+    text-align: center;
+    margin: 20px 0;
+    padding: 10px;
+}
+
 footer {
     position: fixed;
     left: 0;
