--- a/style.css
+++ b/style.css
@@ -146,8 +146,12 @@ container.centered-container {
 }
 
 .typed-text-animation {
-    color: #666;
-    font-size: 36px;
+    background: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+    -webkit-background-clip: text;
+    color: transparent;
+    background-clip: text;
+    display: inline; 
+    font-size: 24px;
 }
 
 footer {
