--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: white;
+    background-color: #E7E8FF;
     color: black;
 }
 
