--- a/style.css
+++ b/style.css
@@ -103,8 +103,7 @@ container.centered-container {
     max-width: 100%;
     margin: 0 auto;
     padding: 20px;
-    align-contents: center;
-    justify-contents: center;
+    float: center;
 }
 
 .image-container {
