--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ container.centered-container {
 }
 
 .image-border {
-    border: 4px solid #fff;
+    border: 4px solid #16415C;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: block;
     margin: 10px auto;
@@ -135,7 +135,7 @@ container.centered-container {
 }
 
 .divider {
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid  #16415C;
     text-align: center;
     margin: 20px 0;
     line-height: 0.1em;
@@ -147,8 +147,8 @@ container.centered-container {
 }
 
 .divider-style-main line {
-    stroke:#333;
-    stroke-width:2;
+    stroke: #16415C;
+    stroke-width: 4;
 }
 
 .divider-style-alt line {
