--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ footer {
     color: #ffffff;
     background-color: #333333;
     text-align: center;
+    padding-top: 70px;
 }
 
 /* Responsive styles for mobile devices */
