--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@ header {
     left: 0;
     right: 0;
     width: 100%;
-    height: 70px;
+    height: 50px;
     z-index: 10;
     background: #333;
     color: #fff;
     padding-top: 20px;
-    padding-bottom: 100px;
-    min-height: 70px;
+    padding-bottom: 20px;
+    min-height: 50px;
     border-bottom: #bbb 1px solid;
 }
 
@@ -88,7 +88,7 @@ nav a {
 }
 
 .section {
-    padding-top: 25px;
+    margin-top: 75px;
 }
 
 .container {
