--- a/style.css
+++ b/style.css
@@ -75,11 +75,18 @@ nav {
     text-align: center;
 }
 
-nav a {
+nav.a {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
+    transition-duration: 0.4s;
     font-size: 16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+nav.a:hover {
+  color: #16415C;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .nav-toggle {
