--- a/style.css
+++ b/style.css
@@ -73,10 +73,11 @@ nav {
     gap: 10px;
     margin-right: 25px;
     text-align: center;
+    color: white;
 }
 
 nav.a {
-    color: #fff;
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
     transition-duration: 0.4s;
