--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ nav a:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    position: relative
 }
 
 .image-container {
