--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ nav a:hover {
 .centered-container {
     width: 70%;
     max-width: 100%;
-    margin: 0 0;
+    margin: auto auto;
     position: absolute;
     top: 50%;
     left: 50%;
