--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
+    top: 125px;
     padding: 20px;
     color: #ffffff;
     background-color: #333333;
