--- a/style.css
+++ b/style.css
@@ -92,13 +92,11 @@ nav a:hover {
 
 .nav-toggle {
     display: none;
-    width: 100%;
-    max-width: 100%;
+    width: 75%;
+    max-width: 80%;
     cursor: pointer;
-    max-width: 100%;
     background-color: black;
-    padding: 25px 25px;
-    size: 50px;
+    padding-left: 25px;
 }
 
 .section {
