--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@ nav a:hover {
     width: 75%;
     max-width: 80%;
     cursor: pointer;
+    background-color: black;
+    zindex: 15;
 }
 
 .section {
@@ -201,7 +203,7 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
-    top: 125px;
+    margin-top: 25px;
     padding: 20px;
     color: #ffffff;
     background-color: #333333;
