--- a/style.css
+++ b/style.css
@@ -105,17 +105,17 @@ nav a:hover {
 }
 
 .container {
-    width: 50%;
+    width: 75%;
     max-width: 100%;
     margin: 0 auto;
-    padding: 60px;
+    padding: 20px;
 }
 
 .centered-container {
-    width: 50%;
+    width: 75%;
     max-width: 100%;
-    margin: auto auto;
-    padding: 60px;
+    margin: 0 auto;
+    padding: 20px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -128,6 +128,8 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .image-container img {
@@ -195,7 +197,7 @@ nav a:hover {
     color: transparent;
     background-clip: text;
     display: inline; 
-    font-size: 36px;
+    font-size: 26px;
 }
 
 footer {
@@ -210,7 +212,7 @@ footer {
 }
 
 /* Responsive styles for mobile devices */
-@media (max-width: 600px) {
+@media (max-width: auto) {
 .nav-toggle {
         display: block;
     }
