--- a/style.css
+++ b/style.css
@@ -111,6 +111,14 @@ nav a:hover {
     padding: 50px;
 }
 
+.section-container {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 10px;
+    margin-bottom: 25px;
+}
+
 .centered-container {
     width: 100%;
     max-width: 100%;
