--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ nav a:hover {
     width: 75%;
     max-width: 80%;
     cursor: pointer;
-    background-color: black;
     zindex: 15;
+    left: 10px;
 }
 
 .section {
@@ -227,4 +227,36 @@ footer {
         display: block;
         max-width: 100%;
     }
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 25px;
+    z-index: 10;
+    background: #333;
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    min-height: 50px;
+    border-bottom: #bbb 1px solid;
+}
+
+.section {
+    margin-top: 70px;
+    padding-bottom: 30px;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+    color: #ffffff;
+    background-color: #333333;
+    text-align: center;
+}
+}
 
