--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ header {
     padding-bottom: 20px;
     min-height: 50px;
     border-bottom: #bbb 1px solid;
+    margin-left: 18px;
 }
 
 .section {
