--- a/style.css
+++ b/style.css
@@ -244,11 +244,11 @@ header {
     padding-bottom: 20px;
     min-height: 50px;
     border-bottom: #bbb 1px solid;
-    margin-left: 18px;
+    margin-left: 20px;
 }
 
 .section {
-    margin-top: 70px;
+    margin-top: 50px;
     padding-bottom: 30px;
 }
 
@@ -257,6 +257,26 @@ header {
     max-width: 100%;
     margin: 0 auto;
     padding-bottom: 100px;
+}
+
+.nav-toggle {
+    display: none;
+    width: 100%;
+    max-width: 100%;
+    cursor: pointer;
+    zindex: 15;
+    position: relative;
+    left: 0px;
+    top: -40px;
+}
+
+navbar active {
+    background: #333;
+    position: fixed;
+    left: 0;
+    top: 60;
+    text-align: center;
+    opacity: 50%;
 }
 
 footer {
