--- a/style.css
+++ b/style.css
@@ -200,6 +200,16 @@ nav a:hover {
     font-size: 26px;
 }
 
+.fun {
+    background: linear-gradient(to black, teal, red, purple, green, yellow, orange, blue);
+    -webkit-background-clip: text;
+    color: transparent;
+    background-clip: text;
+    display: inline; 
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .bold {
   font-weight: bold;
 }
