--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header h1 {
 }
 
 h1.landing-page {
-    color: #16415C;
+    color: black;
     font-size: 36px;
     text-align: center;
     font-weight: bold;
@@ -55,7 +55,7 @@ h1.landing-page {
 }
 
 h2.landing-page {
-    color: #16415C;
+    color: black;
     font-size: 24px;
     text-align: center;
     margin: 20px 0;
