--- a/style.css
+++ b/style.css
@@ -200,13 +200,43 @@ nav a:hover {
     font-size: 26px;
 }
 
+/* Source: https://codepen.io/alvarotrigo/pen/PoKMyNO */
+.animate-characters
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 190px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+/* Source: https://codepen.io/alvarotrigo/pen/PoKMyNO */
+
 .fun {
-    background: linear-gradient(to black, teal, red, purple, green, yellow, orange, blue);
-    -webkit-background-clip: text;
-    background-clip: text;
-    display: inline; 
-    font-size: 16px;
-    font-weight: bold;
+    background: #16415C;
+    opacity: 80%;
+    display: inline;
+    font-size: 36px;
+    padding: 20px;
 }
 
 .bold {
