--- a/style.css
+++ b/style.css
@@ -243,8 +243,8 @@ nav a:hover {
   font-weight: bold;
 }
 
-.right-align {
-  text-align: right;
+.center-align {
+  text-align: center;
 }
 
 footer {
