--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ nav a:hover {
     margin: 0 auto;
 }
 
+.li {
+    padding: 10px;
+}
+
 .centered-container {
     width: 100%;
     max-width: 100%;
