--- a/style.css
+++ b/style.css
@@ -153,18 +153,22 @@ nav a:hover {
     height: auto;
 }
 
-.photo-column {
-  width: 200px;
+.photo-grid {
+  max-width: 100%;
   margin: auto;
 }
 
-.photo-column img {
-  width: 100%;
-  height: auto;
-  display: block;
-  margin-bottom: 10px;
+.photo-row {
+  display: flex;
+  justify-content: center;
+}
+
+.photo-row img {
+  flex: 0 0 30%;
+  margin: 5px;
   border: 4px solid #16415C;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: auto;
 }
 
 .svg-divider {
