--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ nav a:hover {
   text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: textclip 2s linear infinite;
+  animation: textclip 4s linear infinite;
   display: inline-block;
       font-size: 36px;
 }
@@ -252,6 +252,35 @@ nav a:hover {
   }
 }
 /* Source: https://codepen.io/alvarotrigo/pen/PoKMyNO */
+
+.animate-characters-2
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    225deg,
+    #231557 100%,
+    #44107a 67%,
+    #ff1361 29%,
+    #fff800 0%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 8s linear infinite;
+  display: inline-block;
+      font-size: 64px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
 
 .fun {
     background: #16415C;
