--- a/style.css
+++ b/style.css
@@ -154,18 +154,19 @@ nav a:hover {
 }
 
 .photo-grid {
-  max-width: 100%;
+  max-width: 85%;
   margin: auto;
+  padding: 10px;
 }
 
 .photo-row {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .photo-row img {
-  flex: 0 0 30%;
-  margin: 5px;
+  flex: 0 0 calc(33.33% - 20px); 
+  margin: 10px;
   border: 4px solid #16415C;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: auto;
