--- a/style.css
+++ b/style.css
@@ -169,7 +169,8 @@ nav a:hover {
   margin: 10px;
   border: 4px solid #16415C;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: auto;
+  height: 5%;
+  width: 5%;
 }
 
 .svg-divider {
