--- a/style.css
+++ b/style.css
@@ -220,8 +220,15 @@ li {
     -webkit-background-clip: text;
     color: transparent;
     background-clip: text;
-    display: inline; 
-    font-size: 26px;
+    display: inline;
+    font-size: 24px;
+}
+
+.fun-look {
+    font-size: 24px;
+    background: teal;
+    background-opacity: 25%;
+    background-size: auto auto;
 }
 
 /* Source: https://codepen.io/alvarotrigo/pen/PoKMyNO */
@@ -395,7 +402,7 @@ nav {
   text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: textclip 2s linear infinite;
+  animation: textclip 4s linear infinite;
   display: inline-block;
       font-size: 10px;
 }
@@ -405,6 +412,30 @@ nav {
     background-position: 200% center;
   }
 }
+
+.animate-characters-2
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 1s linear infinite;
+  display: inline-block;
+      font-size: 10px;
+}
+
 
 footer {
     position: fixed;
