--- a/style.css
+++ b/style.css
@@ -303,8 +303,16 @@ li {
   font-weight: bold;
 }
 
+.left-align {
+  text-align: left;
+}
+
 .center-align {
   text-align: center;
+}
+
+.right-align {
+  text-align: right;
 }
 
 footer {
