--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav {
 }
 
 nav a {
-    color: white;
+    color: gold;
     text-decoration: none;
     text-transform: uppercase;
     transition-duration: 0.4s;
@@ -204,14 +204,14 @@ li {
     padding: 25px 25px
     text-align: center;
     transition-duration: 0.4s;
-    background-color: white;
+    background-color: gold;
     color: black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .button:hover {
   background-color: black;
-  color: white;
+  color: gold;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -229,6 +229,14 @@ li {
     background: teal;
     background-opacity: 25%;
     background-size: auto auto;
+}
+
+.fun {
+    background: #16415C;
+    opacity: 80%;
+    display: inline;
+    font-size: 36px;
+    padding: 20px;
 }
 
 /* Source: https://codepen.io/alvarotrigo/pen/PoKMyNO */
@@ -291,14 +299,6 @@ li {
   }
 }
 
-.fun {
-    background: #16415C;
-    opacity: 80%;
-    display: inline;
-    font-size: 36px;
-    padding: 20px;
-}
-
 .bold {
   font-weight: bold;
 }
@@ -321,7 +321,7 @@ footer {
     right: 0;
     bottom: 0;
     padding: 20px;
-    color: #ffffff;
+    color: gold;
     background-color: #333333;
     text-align: center;
 }
@@ -381,6 +381,7 @@ header {
     position: relative;
     left: 5px;
     top: -30px;
+    color: gold;
 }
 
 nav {
@@ -389,7 +390,8 @@ nav {
     left: 0;
     top: 60;
     text-align: center;
-    opacity: 50%;
+    opacity: 40%;
+    color: gold;
 }
 
 .animate-characters
@@ -444,14 +446,13 @@ nav {
       font-size: 10px;
 }
 
-
 footer {
     position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     padding: 10px;
-    color: #ffffff;
+    color: gold;
     background-color: #333333;
     text-align: center;
 }
