--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ footer {
     right: 0;
     bottom: 0;
     padding: 20px;
-    color: gold;
+    color: white;
     background-color: #333333;
     text-align: center;
 }
@@ -452,7 +452,7 @@ footer {
     right: 0;
     bottom: 0;
     padding: 10px;
-    color: gold;
+    color: white;
     background-color: #333333;
     text-align: center;
 }
