--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ body.dark-mode {
 }
 
 .body-about {
-    background-color: #E7E8FF;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
 
 .body-demos {
@@ -49,6 +52,18 @@ body.dark-mode {
 
 .body-contact {
     background-color: #E7E8FF;
+}
+
+@keyframes gradient-background {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 header {
