--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body.dark-mode {
 .body-about {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient-background 15s ease infinite;
 	height: 100vh;
 }
 
