--- a/style.css
+++ b/style.css
@@ -34,6 +34,27 @@ body.dark-mode {
   --size: 500px;
 }
 
+/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
+.body-about {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient-background 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient-background {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
+
 .body-demos {
     background-color: #E7E8FF;
 }
