--- a/style.css
+++ b/style.css
@@ -24,35 +24,20 @@ body.dark-mode {
 }
 
 .body-home {
-  background-color: #222;
-  position: absolute;
-  inset: 0;
-  display: flex;
-  place-content: center;
-  align-items: center;
-  overflow: hidden;
-  --size: 500px;
-}
-
-/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
-.body-about {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient-background 15s ease infinite;
   height: 100vh;
 }
 
-@keyframes gradient-background {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
+.body-about {
+  background: linear-gradient(-90deg, #ee6473, #e7375e, #23a6d5, #23d54b);
+  background-size: 400% 400%;
+  animation: gradient-background-1 15s ease infinite;
+  height: 100vh;
 }
+
 /* Source: https://codepen.io/P1N2O/pen/pyBNzX */
 
 .body-demos {
@@ -76,7 +61,7 @@ body.dark-mode {
 }
 
 /* Source: https://codepen.io/P1N2O/pen/pyBNzX */
-@keyframes gradient-background {
+@keyframes gradient-background-1 {
 	0% {
 		background-position: 0% 50%;
 	}
