--- a/style.css
+++ b/style.css
@@ -24,10 +24,7 @@ body.dark-mode {
 }
 
 .body-home {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient-background 30s ease infinite;
-  height: 100vh;
+  background-color: #E7E8FF;
 }
 
 /* Source: https://codepen.io/P1N2O/pen/pyBNzX */
