--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ li {
   background: linear-gradient(to right, #7927b2, #fb3182);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  max-width: 350px;
+  max-width: 100%;
   text-transform: uppercase;
   line-height: .77;
   padding: 5px;
