--- a/style.css
+++ b/style.css
@@ -38,23 +38,23 @@ body.dark-mode {
 /* Source: https://codepen.io/P1N2O/pen/pyBNzX */
 
 .body-demos {
-    background-color: #E7E8FF;
+    background-color: #E7E8FI;
 }
 
 .body-projects {
-    background-color: #E7E8FF;
+    background-color: #E7E8FJ;
 }
 
 .body-music {
-    background-color: #E7E8FF;
+    background-color: #E7E8FK;
 }
 
 .body-blog {
-    background-color: #E7E8FF;
+    background-color: #E7E8FL;
 }
 
 .body-contact {
-    background-color: #E7E8FF;
+    background-color: #E7E8FM;
 }
 
 /* Source: https://codepen.io/P1N2O/pen/pyBNzX */
