--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ h2.landing-page {
     color: black;
     font-size: 24px;
     text-align: center;
-    margin: 20px 0;
-    padding: 10px;
+    margin: 10px 0;
+    padding: 5px;
 }
 
 header h2 {
@@ -172,8 +172,7 @@ li {
 .centered-container {
     width: 100%;
     max-width: 100%;
-    margin: 0 auto;
-    top: 50%;
+    margin: 20px auto;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
