--- a/style.css
+++ b/style.css
@@ -207,8 +207,8 @@ li {
 
 .photo-grid {
   max-width: 100%;
-  margin: auto;
-  padding: 10px;
+  margin: 0 auto;
+  padding: 25px;
 }
 
 .photo-row {
