--- a/style.css
+++ b/style.css
@@ -424,13 +424,14 @@ header {
 .section {
     margin-top: 60px;
     padding-bottom: 30px;
+    margin-bottom: 90px;
 }
 
 .container {
     width: 85%;
     max-width: 100%;
     margin: 0 auto;
-    padding-bottom: 100px;
+    padding-bottom: 10px;
 }
 
 .nav-toggle {
