--- a/style.css
+++ b/style.css
@@ -256,14 +256,14 @@ li {
     padding: 25px 25px
     text-align: center;
     transition-duration: 0.4s;
-    background-color: gold;
+    background-color: white;
     color: black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .button:hover {
-  background-color: black;
-  color: gold;
+  background-color: white;
+  color: black;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
