--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ nav {
     background: #333;
     position: fixed;
     left: 0;
-    top: 65;
+    top: 90px;
     text-align: center;
     opacity: 80%;
     color: white;
