--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ nav a:hover {
 }
 
 .container {
-    width: 70%;
+    width: 90%;
     max-width: 100%;
     margin: 0 auto;
 }
@@ -208,7 +208,7 @@ li {
 .photo-grid {
   max-width: 100%;
   margin: 0 auto;
-  padding: 25px;
+  padding: 10px;
 }
 
 .photo-row {
@@ -221,8 +221,8 @@ li {
   margin: 10px;
   border: 4px solid #16415C;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: 20%;
-  width: 20%;
+  height: 50%;
+  width: 50%;
 }
 
 .svg-divider {
@@ -262,8 +262,8 @@ li {
 }
 
 .button:hover {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
