--- a/style.css
+++ b/style.css
@@ -3,39 +3,13 @@ html, body {
     margin: 0;
 }
 
-/* Default light mode styles */
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: white;
-    color: black;
-}
-
-/* Dark mode styles */
-body.dark-mode {
-    display: flex;
-    flex-direction: column;
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: black;
-    color: white;
-}
-
 .body-home {
   background-color: #E7E8FF;
 }
 
-/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
 .body-about {
-  background: linear-gradient(-90deg, #ee6473, #e7375e, #23a6d5, #23d54b);
-  background-size: 400% 400%;
-  animation: gradient-background-1 1s ease infinite;
-  height: 100vh;
+  background-color: #E7E8FF;
 }
-
-/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
 
 .body-demos {
     background-color: #E7E8FI;
@@ -56,20 +30,6 @@ body.dark-mode {
 .body-contact {
     background-color: #E7E8FM;
 }
-
-/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
-@keyframes gradient-background-1 {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-/* Source: https://codepen.io/P1N2O/pen/pyBNzX */
 
 header {
     position: fixed;
@@ -221,7 +181,7 @@ li {
   margin: 10px;
   border: 4px solid #16415C;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  height: 50%;
+  height: 25%;
   width: 50%;
 }
 
