--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@ html, body {
 }
 
 .body-home {
-  background-color: #E7E8FF;
+  background-color: #E7E8FJ;
 }
 
 .body-about {
-  background-color: #E7E8FF;
+  background-color: #E7E8FJ;
 }
 
 .body-demos {
-    background-color: #E7E8FI;
+    background-color: #E7E8FJ;
 }
 
 .body-projects {
@@ -20,15 +20,15 @@ html, body {
 }
 
 .body-music {
-    background-color: #E7E8FK;
+    background-color: #E7E8FJ;
 }
 
 .body-blog {
-    background-color: #E7E8FL;
+    background-color: #E7E8FJ;
 }
 
 .body-contact {
-    background-color: #E7E8FM;
+    background-color: #E7E8FJ;
 }
 
 header {
