--- a/style.css
+++ b/style.css
@@ -228,12 +228,25 @@ li {
 }
 
 .typed-text-animation {
-    background: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-    -webkit-background-clip: text;
-    color: transparent;
-    background-clip: text;
-    display: inline;
-    font-size: 24px;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 4s linear infinite;
+  display: inline-block;
+      font-size: 36px;
 }
 
 /* Source: https://codepen.io/SoftwaRealles/pen/dExjRWO */
